; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/pvrusb2/extr_pvrusb2-hdw.c_pvr2_hdw_get_ctrl_by_index.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/pvrusb2/extr_pvrusb2-hdw.c_pvr2_hdw_get_ctrl_by_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pvr2_ctrl = type { i32 }
%struct.pvr2_hdw = type { i32, %struct.pvr2_ctrl* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.pvr2_ctrl* @pvr2_hdw_get_ctrl_by_index(%struct.pvr2_hdw* %0, i32 %1) #0 {
  %3 = alloca %struct.pvr2_ctrl*, align 8
  %4 = alloca %struct.pvr2_hdw*, align 8
  %5 = alloca i32, align 4
  store %struct.pvr2_hdw* %0, %struct.pvr2_hdw** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.pvr2_hdw*, %struct.pvr2_hdw** %4, align 8
  %8 = getelementptr inbounds %struct.pvr2_hdw, %struct.pvr2_hdw* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp uge i32 %6, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store %struct.pvr2_ctrl* null, %struct.pvr2_ctrl** %3, align 8
  br label %19

12:                                               ; preds = %2
  %13 = load %struct.pvr2_hdw*, %struct.pvr2_hdw** %4, align 8
  %14 = getelementptr inbounds %struct.pvr2_hdw, %struct.pvr2_hdw* %13, i32 0, i32 1
  %15 = load %struct.pvr2_ctrl*, %struct.pvr2_ctrl** %14, align 8
  %16 = load i32, i32* %5, align 4
  %17 = zext i32 %16 to i64
  %18 = getelementptr inbounds %struct.pvr2_ctrl, %struct.pvr2_ctrl* %15, i64 %17
  store %struct.pvr2_ctrl* %18, %struct.pvr2_ctrl** %3, align 8
  br label %19

19:                                               ; preds = %12, %11
  %20 = load %struct.pvr2_ctrl*, %struct.pvr2_ctrl** %3, align 8
  ret %struct.pvr2_ctrl* %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
